Home Component Design

--- a/Frontend/easybank/src/app/components/home/home.component.html
+++ b/Frontend/easybank/src/app/components/home/home.component.html
@@ -1,1 +1,207 @@
-<p>home works!</p>
+
+<header>
+    <!-- <div class="shape shape1"></div>
+    <div class="shape shape2"></div>
+    <div class="shape shape3"></div> -->
+
+    <div class="container header">
+      <nav>
+        <img src="../../../assets/img/logo.svg" alt="" class="logo" />
+
+        <ul class="nav-ul">
+          <li><a href="#">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#features">Features</a></li>
+          <li class="cta"><a href="#action">Sign In</a></li>
+        </ul>
+
+        <div class="login">
+          <a href="#" class="btn">Sign In</a>
+        </div>
+      </nav>
+    </div>
+
+    <div class="container intro" data-aos="fade-up">
+      <h1>Easy Bank Online Banking</h1>
+      <p>
+          Online Banking Service Dashboard.
+      </p>
+      <a href="#" class="btn">Darshboard Sign In</a>
+      <img src="../../../assets/img/mac.png" alt="" />
+    </div>
+  </header>
+
+  <main>
+    <!-- Services section -->
+    <section id="services">
+      <div class="container">
+        <!-- Heading -->
+        <div class="heading">
+          <h2 class="heading-2">Online Banking Services</h2>
+          <p>Leading Secure Online Banking Solution</p>
+        </div>
+        <!-- services -->
+        <div class="services" data-aos="fade-up">
+          <!-- service 1 -->
+          <div class="service">
+            <i class="fas fa-shield-alt"></i>
+            <h3 class="heading-3">Secure Auth</h3>
+            <p class="text-small">
+              One of UK's leading digital banking solutions.
+            </p>
+            <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
+          </div>
+          <!-- service 1 -->
+          <div class="service">
+            <i class="far fa-chart-bar"></i>
+            <h3 class="heading-3">Online Dashboard</h3>
+            <p class="text-small">
+                One of UK's leading digital banking solutions.
+              </p>
+            <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
+          </div>
+          <!-- service 1 -->
+          <div class="service">
+            <i class="fas fa-user-shield"></i>
+            <h3 class="heading-3">Express Sign In</h3>
+            <p class="text-small">
+                One of UK's leading digital banking solutions.
+              </p>
+            <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
+          </div>
+          <!-- service 1 -->
+          <div class="service">
+            <i class="far fa-address-card"></i>
+            <h3 class="heading-3">Secure Payments</h3>
+            <p class="text-small">
+                One of UK's leading digital banking solutions.
+              </p>
+            <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="consult">
+      <div class="container consult">
+        <div class="consult-text" data-aos="fade-right">
+          <h2 class="heading-2">
+            Easily Manage Your Finances 
+          </h2>
+          <div class="consult-item">
+            <i class="far fa-check-circle"></i>
+            <p>One of UK's leading digital banking solutions.</p>
+          </div>
+          <div class="consult-item">
+            <i class="far fa-check-circle"></i>
+            <p>One of UK's leading digital banking solutions.</p>
+          </div>
+          <div class="consult-item">
+            <i class="far fa-check-circle"></i>
+            <p>One of UK's leading digital banking solutions.</p>
+          </div>
+          <!-- <a href="#" class="btn btn-square">Get a Free Consultation</a> -->
+        </div>
+        <div class="consult-image" data-aos="fade-left">
+          <img src="../../../assets/img/chart.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <!-- Features -->
+    <section id="features">
+      <div class="container features" data-aos="fade-up">
+        <div class="feature-image">
+          <img src="../../../assets/img/phone.png" alt="" />
+        </div>
+        <div class="feature-text">
+          <div class="feature-heading">
+            <h2 class="heading-2 text-white">
+              Mananage and Analyze your payments with our secure services
+            </h2>
+            <p class="text-white">
+                Our Digital Banking Solutions provides secure and managable preferences to suit all needs
+            </p>
+          </div>
+          <div class="feature-items">
+            <!-- Feature Item -->
+            <div class="feature-item">
+                <i class="far fa-address-card"></i>
+              <h3 class="heading-3 text-white">Secure Payments</h3>
+              <p class="text-small text-white">
+                One of the world’s leading software design systems for
+                everyone.
+              </p>
+            </div>
+            <div class="feature-item">
+                <i class="far fa-chart-bar"></i>
+              <h3 class="heading-3 text-white">Analysis</h3>
+              <p class="text-small text-white">
+                One of the world’s leading software design systems for
+                everyone.
+              </p>
+            </div>
+            <div class="feature-item">
+                <i class="fas fa-cogs"></i>
+              <h3 class="heading-3 text-white">Preferences</h3>
+              <p class="text-small text-white">
+                One of the world’s leading software design systems for
+                everyone.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to action -->
+    <section id="action">
+      <div class="container">
+        <div class="heading">
+          <h2 class="heading-2">What are you waiting for?</h2>
+          <p>Get Started with our Digital Banking Dashboard.</p>
+          <a href="#" class="btn btn-square">Sign In</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- <footer>
+    <div class="container footer">
+      <div class="footer-logo">
+        <img src="../../../assets/img/logo.svg" alt="" />
+      </div>
+
+      <div class="footer-links">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#"> Help</a></li>
+          <li><a href="#">Affiliate</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-links">
+        <ul>
+          <li><a href="#">Career</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Partners</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-credit">
+        <p>Sign up fro Newsletter</p>
+        <form action="">
+          <input type="text" placeholder="Enter Email" />
+          <input type="submit" />
+        </form>
+        <p>2021 &copy; ZinoTrust. All rights reserved.</p>
+      </div>
+    </div>
+  </footer> -->
+
+  
+<app-footer></app-footer>
