--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,178 @@
-<p>dashboard works!</p>
+<div class="dashboard-container">
+
+<div class="sidebar">
+  <div class="sidebar-header">
+    <h3 class="brand">
+      <span class="ti-unlink"></span>
+      <span>EasyBank</span>
+    </h3>
+    <span class="ti-menu-alt"></span>
+  </div>
+
+  <div class="sidebar-menu">
+    <ul>
+      <li>
+        <a href="">
+          <span class="ti-home"></span>
+          <span>Home</span>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <span class="ti-credit-card"></span>
+          <span>Payments</span>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <span class="ti-settings"></span>
+          <span>Settings</span>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <span class="ti-bar-chart"></span>
+          <span>Stats</span>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <span></span>
+          <span></span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="dashboard-content">
+  <header>
+    <div class="search-container">
+      <span class="ti-search"></span>
+      <input type="search" placeholder="search" />
+    </div>
+
+    <div class="icons">
+      <span class="ti-bell"></span>
+      <span class="ti-comment"></span>
+      <div></div>
+    </div>
+  </header>
+
+  <main>
+    <h2 class="title">Your Dashboard</h2>
+    <div class="cards-section">
+
+        <div class="card">
+            <div class="card-body">
+                <span class = "ti-briefcase"></span>
+                <div>
+                    <h5>Account Balance</h5>
+                    <h4>£1000,00</h4>
+                </div>
+            </div>
+            <div class="card-footer">
+                <a href="">View All</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <span class = "ti-check-box"></span>
+                <div>
+                    <h5>Payment Sent</h5>
+                    <h4>£1000,00</h4>
+                </div>
+            </div>
+            <div class="card-footer">
+                <a href="">View All</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <span class = "ti-check-box"></span>
+                <div>
+                    <h5>Payment Received</h5>
+                    <h4>£1000,00</h4>
+                </div>
+            </div>
+            <div class="card-footer">
+                <a href="">View All</a>
+            </div>
+        </div>
+    </div>
+
+    <section class="payments">
+        <div class="activity-grid">
+
+            <div class="payment-card">
+                <h3>Your Payments</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Payment</th>
+                            <th>Sent Date</th>
+                            <th>From</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+    
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="information">
+                <div class="info-card">
+                    <div class="info-single">
+                        <span class="ti-id-badge"></span>
+                        <div>
+                            <h5>420</h5>
+                            <small>Your Contacts</small>
+                        </div>
+                    </div>
+                    <div class="info-single">
+                        <span class="ti-id-badge"></span>
+                        <div>
+                            <h5>420</h5>
+                            <small>Payments Sent</small>
+                        </div>
+                    </div>
+                    <div class="info-single">
+                        <span class="ti-id-badge"></span>
+                        <div>
+                            <h5>420</h5>
+                            <small>Payments Received</small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="info-card-two">
+                    <div class="card-two-img"></div>
+                    <div class="info-card-two-content">
+                        <h5>Mark Dargie</h5>
+                        <small>Card Information</small>
+
+                        <div>
+                            <button>
+                                <span class="ti-gift"></span>
+                                Clear Payment
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+</main>
+
+</div>
+
+
+
+</div>
