--- a/Frontend/easybank/src/app/components/home/home.component.css
+++ b/Frontend/easybank/src/app/components/home/home.component.css
@@ -1,3 +1,100 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
+
+:root {
+    --white: rgb(250, 250, 250);
+    --black: #141414;
+    --blue: #31326f;
+    --light-blue: #2e5bff;
+    --color-primary: #9a2eff;
+    --color-sec: #db6400;
+    --color-grey: rgb(216, 216, 216);
+    --color-dark-grey: #1d1d1d;
+    --color-light-grey:#505050;
+
+    --dashboard-main: #027581;
+    --dashboard-dark: #1d2231;
+    --dashboard-grey: #8390a2;
+
+    --body-font: "Open Sans", sans-serif;
+    --biggest-font-size: 2.25rem;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1.25rem;
+    --normal-font-size: .938rem;
+    --small-font-size: .813rem;
+    --smaller-font-size: .75rem;
+    /*========== Font weight ==========*/
+    --font-medium: 500;
+    --font-semi-bold: 600;
+      
+        /*========== Margenes ==========*/
+    --mb-1: .5rem;
+    --mb-2: 1rem;
+    --mb-3: 1.5rem;
+    --mb-4: 2rem;
+    --mb-5: 2.5rem;
+    --mb-6: 3rem;
+      
+        /*========== z index ==========*/
+     --z-tooltip: 10;
+    --z-fixed: 100;
+
+
+
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style-type: none;
+    box-sizing: border-box;
+  }
+  
+  /* html {
+    font-size: 10px;
+  } */
+  
+  body {
+    font-family: "Open Sans", sans-serif;
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  /* h1,h2,h3,h4,h5,p,ul,li{
+    margin:0;
+    padding:0;
+    line-height: normal;
+    font-weight: normal;
+    font-style: normal;
+} */
+
+
+ul{
+    padding:0;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+    @media screen and (min-width: 768px){
+
+    :root{
+
+        --biggest-font-size: 4rem;
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.5rem;
+        --normal-font-size: 1rem;
+        --small-font-size: .875rem;
+        --smaller-font-size: .813rem;
+
+    }
+
+  }
+
 p {
   font-size: 1.6rem;
   line-height: 1.5;
@@ -17,6 +114,7 @@ section {
   width: 100%;
   padding: 10rem 0;
 }
+
 
 /********** HEADER STYLES ***********/
 /********** HEADER STYLES ***********/
