--- a/Frontend/easybank/src/app/components/home/home.component.html
+++ b/Frontend/easybank/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-
+<div class="home-container">
 <header>
     <!-- <div class="shape shape1"></div>
     <div class="shape shape2"></div>
@@ -205,3 +205,4 @@
 
   
 <app-footer></app-footer>
+</div>
