--- a/Frontend/easybank/src/styles.css
+++ b/Frontend/easybank/src/styles.css
@@ -11,6 +11,10 @@
     --color-dark-grey: #1d1d1d;
     --color-light-grey:#505050;
 
+    --dashboard-main: #027581;
+    --dashboard-dark: #1d2231;
+    --dashboard-grey: #8390a2;
+
     --body-font: "Open Sans", sans-serif;
     --biggest-font-size: 2.25rem;
     --h1-font-size: 1.5rem;
@@ -42,6 +46,8 @@
   * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style-type: none;
     box-sizing: border-box;
   }
   
