--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -118,7 +118,52 @@
                         </tr>
                     </thead>
                     <tbody>
-    
+
+                        <tr>
+                            <td>Received Payment</td>
+                            <td>25/02/2021</td>
+                            <td>
+                                <div class="image-1"></div>
+                                <div class="image-2"></div>
+                                <div class="image-3"></div>
+                            </td>
+                            <td>
+                                <span class="payment-success">
+                                    Confirmed
+                                </span>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Received Payment</td>
+                            <td>25/02/2021</td>
+                            <td>
+                                <div class="image-1"></div>
+                                <div class="image-2"></div>
+                                <div class="image-3"></div>
+                            </td>
+                            <td>
+                                <span class="payment-success">
+                                    Confirmed
+                                </span>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Received Payment</td>
+                            <td>25/02/2021</td>
+                            <td>
+                                <div class="image-1"></div>
+                                <div class="image-2"></div>
+                                <div class="image-3"></div>
+                            </td>
+                            <td>
+                                <span class="payment-success">
+                                    Confirmed
+                                </span>
+                            </td>
+                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
