--- a/Frontend/easybank/src/app/components/home/home.component.html
+++ b/Frontend/easybank/src/app/components/home/home.component.html
@@ -103,7 +103,7 @@
           <!-- <a href="#" class="btn btn-square">Get a Free Consultation</a> -->
         </div>
         <div class="consult-image" data-aos="fade-left">
-          <img src="../../../assets/img/chart.png" alt="" />
+          <img src="../../../assets/img/cards2.png" alt="" />
         </div>
       </div>
     </section>
