Payment Method Hashing and Schema Updated

--- a/Frontend/easybank/src/app/components/register/register.component.html
+++ b/Frontend/easybank/src/app/components/register/register.component.html
@@ -1,3 +1,5 @@
+<!-- <p>register works!</p> -->
+
 <!-- <p>login works!</p> -->
 
 <div class="login-sections">
@@ -12,15 +14,15 @@
     <div class="right">
         <form>
             <section class="login-section">
-                <h2>Sign In</h2>
+                <h2>Sign Up</h2>
                 <div class="login-container">
-                    <p>Don't have an account ? <a href="#">
-                        <strong>Create Account</strong>
+                    <p>Already have an account ? <a href="#">
+                        <strong>Sign In</strong>
                     </a></p>
                 </div>
             </section>
             <div class="input-container name">
-                <label for="fname">Username</label>
+                <label for="fname">Full Name</label>
                 <input id="fname" name="fname" type="text">
             </div>
             <div class="input-container email">
@@ -32,16 +34,16 @@
                 <input id="password" name="password" type="password">
                 <i class="far fa-eye-slash"></i>
             </div>
-            <!-- <div class="input-container password">
+            <div class="input-container password">
                 <label for="password">Confirm Password</label>
                 <input id="password" name="password" type="password">
                 <i class="far fa-eye-slash"></i>
-            </div> -->
-            <!-- <div class="input-container password">
+            </div>
+            <div class="input-container password">
                 <label for="password">4 Digit Secure Code</label>
                 <input id="password" name="password" type="password">
-            </div> -->
-            <button class="login-button" type="submit">Sign In</button>
+            </div>
+            <button class="login-button" type="submit">Sign Up</button>
         </form>
     </div>
 </div>
