--- a/Frontend/easybank/src/app/components/login/login.component.html
+++ b/Frontend/easybank/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="right">
-        <form>
+        <form class="loginform" (ngSubmit)="onLoginButtonClick()" #loginform="ngForm">
             <section class="login-section">
                 <h2>Sign In</h2>
                 <div class="login-container">
@@ -21,16 +21,16 @@
             </section>
             <div class="input-container name">
                 <label for="fname">Username</label>
-                <input id="fname" name="fname" type="text">
+                <input id="fname" name="fname" type="text" ngModel>
             </div>
-            <div class="input-container email">
+            <!-- <div class="input-container email">
                 <label for="email">Email</label>
                 <input id="email" name="email" type="text">
-            </div>
+            </div> -->
             <div class="input-container password">
                 <label for="password">Password</label>
-                <input id="password" name="password" type="password">
-                <i class="far fa-eye-slash"></i>
+                <input id="password" name="password" type="password" ngModel>
+                <!-- <i class="far fa-eye-slash"></i> -->
             </div>
             <!-- <div class="input-container password">
                 <label for="password">Confirm Password</label>
