--- a/Frontend/easybank/src/app/components/register/register.component.html
+++ b/Frontend/easybank/src/app/components/register/register.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="right">
-        <form>
+        <form class="registerform" (ngSubmit)="OnRegisterFormSubmit()" #registerform="ngForm">
             <section class="login-section">
                 <h2>Sign Up</h2>
                 <div class="login-container">
@@ -22,26 +22,26 @@
                 </div>
             </section>
             <div class="input-container name">
-                <label for="fname">Full Name</label>
-                <input id="fname" name="fname" type="text">
+                <label for="fname">Username</label>
+                <input id="fname" name="fname" type="text" ngModel>
             </div>
             <div class="input-container email">
                 <label for="email">Email</label>
-                <input id="email" name="email" type="text">
+                <input id="email" name="email" type="text" ngModel>
             </div>
             <div class="input-container password">
                 <label for="password">Password</label>
-                <input id="password" name="password" type="password">
+                <input id="password" name="password" type="password" ngModel>
                 <i class="far fa-eye-slash"></i>
             </div>
             <div class="input-container password">
                 <label for="password">Confirm Password</label>
-                <input id="password" name="password" type="password">
+                <input id="password-confirm" name="password-confirm" type="password" ngModel>
                 <i class="far fa-eye-slash"></i>
             </div>
             <div class="input-container password">
                 <label for="password">4 Digit Secure Code</label>
-                <input id="password" name="password" type="password">
+                <input id="securecode" name="securecode" type="password" ngModel>
             </div>
             <button class="login-button" type="submit">Sign Up</button>
         </form>
