--- a/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,51 @@
-<p>sidebar works!</p>
+<!-- <p>sidebar works!</p> -->
+<div class="sidebar">
+    <div class="sidebar-header">
+      <h3 class="brand">
+        <span class="ti-unlink"></span>
+        <span>EasyBank</span>
+      </h3>
+      <label for="sidebar-toggle" class="ti-menu-alt"></label>
+    </div>
+  
+    <div class="sidebar-menu">
+      <ul>
+        <li>
+          <a href="">
+            <span class="ti-home"></span>
+            <span>Home</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span class="ti-credit-card"></span>
+            <span>Transfer</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span class="ti-stats-up"></span>
+            <span>Payments</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span class="ti-settings"></span>
+            <span>Settings</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span class="ti-bar-chart"></span>
+            <span>Stats</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span></span>
+            <span></span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
