Updated Angular Component Layouts

--- a/Frontend/easybank/src/app/components/admin/admin.component.html
+++ b/Frontend/easybank/src/app/components/admin/admin.component.html
@@ -1,1 +1,34 @@
-<p>admin works!</p>
+<!-- <p>admin works!</p> -->
+<div class="dashboard-container">
+
+    <input type="checkbox" id="sidebar-toggle">
+    
+    <app-sidebar></app-sidebar>
+    
+    <div class="dashboard-content">
+      <header>
+        <div class="search-container">
+          <!-- <span class="ti-search"></span>
+          <input type="search" placeholder="search" /> -->
+        </div>
+    
+        <div class="icons">
+          <span class="ti-palette"></span>
+          <div></div>
+        </div>
+      </header>
+    
+      <main>
+        <h2 class="title">Admin Dashboard</h2>
+
+        <div>
+            <canvas id="canvas"> {{ chart }}</canvas>
+        </div>
+    
+    </main>
+    
+    </div>
+    
+    
+    
+    </div>
