--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -51,8 +51,8 @@
 <div class="dashboard-content">
   <header>
     <div class="search-container">
-      <span class="ti-search"></span>
-      <input type="search" placeholder="search" />
+      <!-- <span class="ti-search"></span>
+      <input type="search" placeholder="search" /> -->
     </div>
 
     <div class="icons">
