--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -67,7 +67,7 @@
 
         <div class="card">
             <div class="card-body">
-                <span class = "ti-briefcase"></span>
+                <span><i class="fas fa-piggy-bank"></i></span>
                 <div>
                     <h5>Account Balance</h5>
                     <h4>£1000,00</h4>
@@ -80,7 +80,7 @@
 
         <div class="card">
             <div class="card-body">
-                <span class = "ti-check-box"></span>
+                <span><i class="fas fa-sync-alt"></i></span>
                 <div>
                     <h5>Payment Sent</h5>
                     <h4>£1000,00</h4>
@@ -93,7 +93,7 @@
 
         <div class="card">
             <div class="card-body">
-                <span class = "ti-check-box"></span>
+                <span><i class="fas fa-sync-alt"></i></span>
                 <div>
                     <h5>Payment Received</h5>
                     <h4>£1000,00</h4>
@@ -195,21 +195,21 @@
             <div class="information">
                 <div class="info-card">
                     <div class="info-single">
-                        <span class="ti-id-badge"></span>
+                        <span><i class="fas fa-user-friends"></i></span>
                         <div>
                             <h5>420</h5>
                             <small>Your Contacts</small>
                         </div>
                     </div>
                     <div class="info-single">
-                        <span class="ti-check-box"></span>
+                        <span><i class="fas fa-sync-alt"></i></span>
                         <div>
                             <h5>420</h5>
                             <small>Payments Sent</small>
                         </div>
                     </div>
                     <div class="info-single">
-                        <span class="ti-check-box"></span>
+                        <span><i class="fas fa-sync-alt"></i></span>
                         <div>
                             <h5>420</h5>
                             <small>Payments Received</small>
