--- a/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
@@ -12,13 +12,13 @@
       <ul>
         <li>
           <a href="">
-            <span class="ti-home"></span>
+            <span><i class="fas fa-home"></i></span>
             <span>Home</span>
           </a>
         </li>
         <li>
           <a href="">
-            <span class="ti-credit-card"></span>
+            <span><i class="far fa-credit-card"></i></span>
             <span>Transfer</span>
           </a>
         </li>
@@ -30,14 +30,20 @@
         </li>
         <li>
           <a href="">
-            <span class="ti-settings"></span>
+            <span><i class="fas fa-cog"></i></span>
             <span>Settings</span>
           </a>
         </li>
         <li>
           <a href="">
-            <span class="ti-bar-chart"></span>
+            <span><i class="far fa-chart-bar"></i></span>
             <span>Stats</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span><i class="fas fa-user"></i></span>
+            <span>Sign Out</span>
           </a>
         </li>
         <li>
